Allow to have multiple opponents for a 2v2 game #185
Also update frontend so it still works with updated DTO structure
Add several TODO where a specific behavior should be implemented for 2v2 mode